syntax = "proto3";

option php_namespace = "GRPC\\Services\\Payment";
option php_metadata_namespace = "GRPC\\Services\\Payment\\Meta";

package microtix;

service Payment {
    rpc pay(PaymentInfo) returns (Status);
}

message PaymentInfo {
    int32 customer_id = 1;
    int32 event_id = 2;
    string email = 3;
    string card = 4;
    int64 exp_month = 5;
    int64 exp_year = 6;
    string cvv = 7;
}

message Status {
    bool success = 1;
}